[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axl-news"
version = "0.1.0"
description = "MCP tool for crypto news, bridge intelligence, and economy stats in AXL format"
dependencies = ["axl-core>=0.5.0", "mcp", "httpx"]
authors = [{name = "AXL Protocol Inc.", email = "admin@axlprotocol.org"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://axlprotocol.org"
Repository = "https://github.com/axlprotocol/axl-mcp-tools"

[tool.setuptools.packages.find]
where = ["src"]
